support for graalvm native compile and used sequence collection.